--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -547,7 +548,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="8"
                     android:weightSum="8"
-                    android:id="@+id/InnerDiscard">
+                    android:id="@+id/InnerDiscard"
+                    android:filterTouchesWhenObscured="false">
 
                     <LinearLayout
                         android:orientation="horizontal"
@@ -1127,55 +1129,62 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile1"
-            android:background="@drawable/mahjong1"/>
+            android:src="@drawable/mahjong1"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile2"
-            android:background="@drawable/mahjong2"/>
+            android:src="@drawable/mahjong2"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile3"
-            android:background="@drawable/mahjong3"/>
+            android:src="@drawable/mahjong3"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile4"
-            android:background="@drawable/mahjong5"/>
+            android:src="@drawable/mahjong5"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile5"
-            android:background="@drawable/mahjong6"/>
+            android:src="@drawable/mahjong6"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile6"
-            android:background="@drawable/mahjong7"/>
+            android:src="@drawable/mahjong7"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile7"
-            android:background="@drawable/mahjong8"/>
+            android:src="@drawable/mahjong8"
+            android:background="#00B200"/>
 
     </LinearLayout>
 
@@ -1192,53 +1201,59 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile8"
-            android:background="@drawable/mahjong9"/>
+            android:src="@drawable/mahjong9"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile9"
-            android:background="@drawable/mahjong9"/>
+            android:src="@drawable/mahjong9"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile10"
-            android:background="@drawable/mahjong1"/>
+            android:src="@drawable/mahjong1"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/tile11"/>
+            android:id="@+id/tile11"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/tile12"/>
+            android:id="@+id/tile12"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:id="@+id/tile13"/>
+            android:id="@+id/tile13"
+            android:background="#00B200"/>
 
         <ImageButton
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:id="@+id/tile14"
-            android:background="@drawable/mahjong5"/>
+            android:src="@drawable/mahjong5"
+            android:background="#00B200"/>
 
-    </LinearLayout>
-
+</LinearLayout>
 </LinearLayout>
