--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,13 @@
     android:id="@+id/Main">
 
     <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="right"></LinearLayout>
+
+    <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -571,7 +578,50 @@
                             android:layout_weight="1"
                             android:id="@+id/Discard1Tile2"
                             android:background="@drawable/mahjong4"/>
+
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="5"></LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:id="@+id/SpinnerDisplay"
+                        android:layout_weight="1">
+
+                        <Spinner
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/EmoteSpinner"
+                            android:layout_weight="1"
+                            android:entries="@array/emote_choices"
+                            android:prompt="@array/emote_prompt"
+                            android:spinnerMode="dropdown" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:id="@+id/TextDisplay"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:id="@+id/DisplayTextBox"
+                            android:layout_weight="1"
+                            android:textSize="32dp"
+                            android:singleLine="true" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -1038,7 +1088,8 @@
             android:layout_marginTop="10dp"
             android:background="#449616"
             android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:clickable="true" />
 
         <Button
             android:layout_width="0dp"
