--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="del_player_button_size">35dp</dimen>
+    <dimen name="table_heading_font_size">14sp</dimen>
+    <dimen name="tab_height">75dp</dimen>
+    <dimen name="table_row_vert_pad">10dp</dimen>
+    <dimen name="table_row_horiz_pad">50dp</dimen>
+    <dimen name="config_horiz_margin">20dp</dimen>
+
 </resources>
